[package]
name = "rust-torch-exp"
version = "0.1.0"
authors = ["ahirner <a.hirner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.22.1", default-features = false, features = ["opencv-41"]}
tch = {git = "https://github.com/LaurentMazare/tch-rs.git", rev = "3704b1efd992c59f5a8eb76b0a7347a01aedc5ba"}
genawaiter = "0.2.2"
