[package]
name = "rust-torch-exp"
version = "0.1.0"
authors = ["ahirner <a.hirner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tch]
git = "https://github.com/LaurentMazare/tch-rs.git"
ref =  "a4fab2306e194a542d3818bf34d7c1a22e6d65c3"

[dependencies.opencv]
version = "0.41"
default-features = false
features = ["opencv-4", "buildtime-bindgen"]
